--- a/organic-chemistry-mindmap.html
+++ b/organic-chemistry-mindmap.html
@@ -72,8 +72,7 @@
         <div class="row">
           <div class="col-xl-8 col-lg-12">
             <h2>Summary (bubble chart)</h2>
-
-            <canvas id="bubble-chart" width="16" height="9"></canvas>
+            <canvas id="bubble-chart"></canvas>
           </div>
 
         </div>
@@ -85,20 +84,25 @@
     <section class="resume-section-grid" id="anothersummary">
       <div class="parent">
         <div class="div1">
-          <div class="card-grid p-3">
-            <div class="position-absolute top-50 start-50 translate-middle  text-center">
-              <h2>Summary of summary</h2>
-              <p>Summary of reactions by mechanism <br>(try to recall the reactions, then hover to comfirm your intuition)</p>
-              <p style="font-size:0.8rem"><sup>*</sup> denotes important/hard to memorize stuff</p>
+          <div class="card-grid">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto">
+                <h2>Summary of summary</h2>
+                <p>Summary of reactions by mechanism <br>(try to recall the reactions, then hover to comfirm your intuition)</p>
+              </div>
+
             </div>
           </div>
         </div>
         <div class="div2">
-          <div class="card-grid p-3 displayed-content">
-            <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
-              <h2 class="text-white">Nucleophilic Substitution</h2>
-              <p>Halogenoalkanes, Aliphatic alcohol, Carboxylic acid, Amine</p>
+          <div class="card-grid  displayed-content">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto text-white">
+                <h2 class="text-white">Nucleophilic Substitution</h2>
+                <p>Halogenoalkanes, Aliphatic alcohol, Carboxylic acid, Amine</p>
+              </div>
             </div>
+
           </div>
           <div class="card-grid hidden-content">
             <div class="position-absolute mx-auto w-100 h-100 text-white text-center row">
@@ -124,11 +128,14 @@
           </div>
         </div>
         <div class="div3">
-          <div class="card-grid p-3 displayed-content">
-            <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
-              <h2 class="text-white">Nucleophilic Addition</h2>
-              <p>Aldehyde, Ketone</p>
+          <div class="card-grid  displayed-content">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto text-white">
+                <h2 class="text-white">Nucleophilic Addition</h2>
+                <p>Aldehyde, Ketone</p>
+              </div>
             </div>
+
           </div>
           <div class="card-grid hidden-content">
             <div class="position-absolute mx-auto w-100 h-100 text-white text-center row">
@@ -140,11 +147,14 @@
           </div>
         </div>
         <div class="div4">
-          <div class="card-grid p-3 displayed-content">
-            <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
-              <h2 class="text-white">Electrophilic Addition</h2>
-              <p>Alkenes</p>
+          <div class="card-grid  displayed-content">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto text-white">
+                <h2 class="text-white">Electrophilic Addition</h2>
+                <p>Alkenes</p>
+              </div>
             </div>
+
           </div>
           <div class="card-grid hidden-content">
             <div class="position-absolute mx-auto w-100 h-100 text-white text-center row">
@@ -156,11 +166,14 @@
           </div>
         </div>
         <div class="div5">
-          <div class="card-grid p-3 displayed-content">
-            <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
-              <h2 class="text-white">Electrophilic Substitution</h2>
-              <p>Arenes, Halogenoarenes, Aromatic alcohol</p>
+          <div class="card-grid  displayed-content">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto text-white">
+                <h2 class="text-white">Electrophilic Substitution</h2>
+                <p>Arenes, Halogenoarenes, Aromatic alcohol</p>
+              </div>
             </div>
+
           </div>
           <div class="card-grid hidden-content">
             <div class="position-absolute mx-auto w-100 h-100 text-white text-center row">
@@ -176,11 +189,14 @@
           </div>
         </div>
         <div class="div6">
-          <div class="card-grid p-3 displayed-content">
-            <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
-              <h2 class="text-white">Condensation (N.A.S)</h2>
-              <p>Aliphatic and aromatic alcohol, Carboxylic acid and Acyl chloride, Amine</p>
+          <div class="card-grid  displayed-content">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto text-white">
+                <h2 class="text-white">Condensation (N.A.S)</h2>
+                <p>Aliphatic and aromatic alcohol, Carboxylic acid and Acyl chloride, Amine</p>
+              </div>
             </div>
+
           </div>
           <div class="card-grid hidden-content">
             <div class="position-absolute mx-auto w-100 h-100 text-white text-center row">
@@ -201,11 +217,14 @@
           </div>
         </div>
         <div class="div7">
-          <div class="card-grid p-3 displayed-content">
-            <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
-              <h2 class="text-white">Condensation</h2>
-              <p>Aldehyde and Ketone</p>
+          <div class="card-grid  displayed-content">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto text-white">
+                <h2 class="text-white">Condensation</h2>
+                <p>Aldehyde and Ketone</p>
+              </div>
             </div>
+
           </div>
           <div class="card-grid hidden-content">
             <div class="position-absolute mx-auto w-100 h-100 text-white text-center row">
@@ -218,11 +237,14 @@
           </div>
         </div>
         <div class="div8">
-          <div class="card-grid p-3 displayed-content">
-            <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
-              <h2 class="text-white">Elimination</h2>
-              <p>Halogenoalkane, Aliphatic alcohol</p>
+          <div class="card-grid  displayed-content">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto text-white">
+                <h2 class="text-white">Elimination</h2>
+                <p>Halogenoalkane, Aliphatic alcohol</p>
+              </div>
             </div>
+
           </div>
           <div class="card-grid hidden-content">
             <div class="position-absolute mx-auto w-100 h-100 text-white text-center row">
@@ -238,11 +260,14 @@
           </div>
         </div>
         <div class="div9">
-          <div class="card-grid p-3 displayed-content">
-            <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
-              <h2 class="text-white">Others</h2>
-              <p>Complex formation and FRS</p>
+          <div class="card-grid  displayed-content">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto text-white">
+                <h2 class="text-white">Others</h2>
+                <p>Complex formation and FRS</p>
+              </div>
             </div>
+
           </div>
           <div class="card-grid hidden-content">
             <div class="position-absolute mx-auto w-100 h-100 text-white text-center row">
@@ -258,11 +283,14 @@
           </div>
         </div>
         <div class="div10">
-          <div class="card-grid p-3 displayed-content">
-            <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
-              <h2 class="text-white">Hydrolysis</h2>
-              <p>Cyanide, Esters, Amide, Acyl chloride</p>
+          <div class="card-grid  displayed-content">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto text-white">
+                <h2 class="text-white">Hydrolysis</h2>
+                <p>Cyanide, Esters, Amide, Acyl chloride</p>
+              </div>
             </div>
+
           </div>
           <div class="card-grid hidden-content">
             <div class="position-absolute mx-auto w-100 h-100 text-white text-center row">
@@ -285,11 +313,14 @@
           </div>
         </div>
         <div class="div11">
-          <div class="card-grid p-3 displayed-content">
-            <div class="position-absolute top-50 start-50 translate-middle  text-center">
-              <h2>Oxidation</h2>
-              <p>Alkene, Aliphatic alcohol, Aldehyde and Ketone</p>
+          <div class="card-grid  displayed-content">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto">
+                <h2>Oxidation</h2>
+                <p>Alkene, Aliphatic alcohol, Aldehyde and Ketone</p>
+              </div>
             </div>
+
           </div>
           <div class="card-grid hidden-content">
             <div class="position-absolute mx-auto w-100 h-100 text-center row">
@@ -318,11 +349,14 @@
           </div>
         </div>
         <div class="div12">
-          <div class="card-grid p-3 displayed-content">
-            <div class="position-absolute top-50 start-50 translate-middle text-center">
-              <h2>Mild oxidation</h2>
-              <p>Alkene and Aliphatic alcohol</p>
+          <div class="card-grid  displayed-content">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto">
+                <h2>Mild oxidation</h2>
+                <p>Alkene and Aliphatic alcohol</p>
+              </div>
             </div>
+
           </div>
           <div class="card-grid hidden-content">
             <div class="position-absolute mx-auto w-100 h-100 text-center row">
@@ -338,11 +372,14 @@
           </div>
         </div>
         <div class="div13">
-          <div class="card-grid p-3 displayed-content">
-            <div class="position-absolute top-50 start-50 translate-middle  text-center">
-              <h2>Reduction</h2>
-              <p>Alkene, Cyanide, Aldehyde and Ketone, Carboxylic acid, Nitride</p>
+          <div class="card-grid  displayed-content">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto">
+                <h2>Reduction</h2>
+                <p>Alkene, Cyanide, Aldehyde and Ketone, Carboxylic acid, Nitride</p>
+              </div>
             </div>
+
           </div>
           <div class="card-grid hidden-content">
             <div class="position-absolute mx-auto w-100 h-100 text-center row">
@@ -367,11 +404,14 @@
           </div>
         </div>
         <div class="div14">
-          <div class="card-grid p-3 displayed-content">
-            <div class="position-absolute top-50 start-50 translate-middle text-center">
-              <h2>Acid-base reactions</h2>
-              <p>Aliphatic and aromatic alcohol, Carboxylic acid, Amine</p>
+          <div class="card-grid  displayed-content">
+            <div class="position-absolute w-100 h-100 mx-auto text-center row">
+              <div class="my-auto">
+                <h2>Acid-base reactions</h2>
+                <p>Aliphatic and aromatic alcohol, Carboxylic acid, Amine</p>
+              </div>
             </div>
+
           </div>
           <div class="card-grid hidden-content">
             <div class="position-absolute mx-auto w-100 h-100 text-center row">
