--- a/organic-chemistry-mindmap.html
+++ b/organic-chemistry-mindmap.html
@@ -70,7 +70,7 @@
     <section class="resume-section" id="summary" style="max-width:inherit!important">
       <div class="resume-section-content">
         <div class="row">
-          <div class="col-xl-8 col-lg-12">
+          <div class="col-12">
             <h2>Summary (bubble chart)</h2>
             <canvas id="bubble-chart"></canvas>
           </div>
