--- a/organic-chemistry-mindmap.html
+++ b/organic-chemistry-mindmap.html
@@ -82,8 +82,8 @@
     <hr class="m-0" />
     <!-- Education-->
     <section class="resume-section-grid" id="anothersummary">
-      <div class="parent">
-        <div class="div1">
+      <div class="chem-parent">
+        <div class="chem-div1">
           <div class="card-grid">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto">
@@ -94,7 +94,7 @@
             </div>
           </div>
         </div>
-        <div class="div2">
+        <div class="chem-div2">
           <div class="card-grid  displayed-content">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto text-white">
@@ -127,7 +127,7 @@
             </div>
           </div>
         </div>
-        <div class="div3">
+        <div class="chem-div3">
           <div class="card-grid  displayed-content">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto text-white">
@@ -146,7 +146,7 @@
             </div>
           </div>
         </div>
-        <div class="div4">
+        <div class="chem-div4">
           <div class="card-grid  displayed-content">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto text-white">
@@ -165,7 +165,7 @@
             </div>
           </div>
         </div>
-        <div class="div5">
+        <div class="chem-div5">
           <div class="card-grid  displayed-content">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto text-white">
@@ -188,7 +188,7 @@
             </div>
           </div>
         </div>
-        <div class="div6">
+        <div class="chem-div6">
           <div class="card-grid  displayed-content">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto text-white">
@@ -216,7 +216,7 @@
             </div>
           </div>
         </div>
-        <div class="div7">
+        <div class="chem-div7">
           <div class="card-grid  displayed-content">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto text-white">
@@ -236,7 +236,7 @@
             </div>
           </div>
         </div>
-        <div class="div8">
+        <div class="chem-div8">
           <div class="card-grid  displayed-content">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto text-white">
@@ -259,7 +259,7 @@
             </div>
           </div>
         </div>
-        <div class="div9">
+        <div class="chem-div9">
           <div class="card-grid  displayed-content">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto text-white">
@@ -282,7 +282,7 @@
             </div>
           </div>
         </div>
-        <div class="div10">
+        <div class="chem-div10">
           <div class="card-grid  displayed-content">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto text-white">
@@ -296,23 +296,23 @@
             <div class="position-absolute mx-auto w-100 h-100 text-white text-center row">
               <div class="col my-auto">
                 <h5 class="text-white">Acid hydrolysis</h5>
-                <p class="text-white">Cyanide, Esters<sup>*</sup>, Amide</p>
+                <p>Cyanide, Esters<sup>*</sup>, Amide</p>
                 <p>Dilute acid, heat</p>
               </div>
               <div class="col my-auto">
                 <h5 class="text-white">base hydrolysis</h5>
-                <p class="text-white">Cyanide, Esters<sup>*</sup>, Amide</p>
+                <p>Cyanide, Esters<sup>*</sup>, Amide</p>
                 <p>Dilute base, heat</p>
               </div>
               <div class="col my-auto">
                 <h5 class="text-white">Water hydrolysis</h5>
-                <h6 class="text-white">Acyl chloride</h6>
+                <p>Acyl chloride</p>
                 <p>H<sub>2</sub>O</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="div11">
+        <div class="chem-div11">
           <div class="card-grid  displayed-content">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto">
@@ -348,7 +348,7 @@
             </div>
           </div>
         </div>
-        <div class="div12">
+        <div class="chem-div12">
           <div class="card-grid  displayed-content">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto">
@@ -371,7 +371,7 @@
             </div>
           </div>
         </div>
-        <div class="div13">
+        <div class="chem-div13">
           <div class="card-grid  displayed-content">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto">
@@ -403,7 +403,7 @@
             </div>
           </div>
         </div>
-        <div class="div14">
+        <div class="chem-div14">
           <div class="card-grid  displayed-content">
             <div class="position-absolute w-100 h-100 mx-auto text-center row">
               <div class="my-auto">
