--- a/eunoiashining/tutorial/index.html
+++ b/eunoiashining/tutorial/index.html
@@ -66,10 +66,10 @@
         and tryna explore on
         how to encorporate your own style into your webpage, just go wild and be creative :) </p>
       <h1 class="mt-4">Components of webpages/websites</h1>
-      <p>There are three components that builds up our modern websites: <code>Html</code>, <code>CSS</code> and <code>Javascript</code>. For this course, we will ignore Javascript because for our purpose, we don't really need any heavy
+      <p class="text-justify">There are three components that builds up our modern websites: <code>Html</code>, <code>CSS</code> and <code>Javascript</code>. For this course, we will ignore Javascript because for our purpose, we don't really need any heavy
         programming.
       </p>
-      <p>If HTML is the skeleton of a person, CSS would be the skin and clothes of the person. Basically, a webpage with no HTML just doesn't exist, HTML without CSS is a mere skeleton, CSS with HTML gives you a whole person with clothes. If the CSS
+      <p class="text-justify">If HTML is the skeleton of a person, CSS would be the skin and clothes of the person. Basically, a webpage with no HTML just doesn't exist, HTML without CSS is a mere skeleton, CSS with HTML gives you a whole person with clothes. If the CSS
         is done well, the clothes will look nice, if you screw that up, you may get some variant of EJ uniform :/ (jk our uni is really nice, except for the boys we will end up looking like some coffee shop uncle with dem grey striped long pants).
         Screw up the html on the other hand, you'll prolly get something like having a nose in the butt. You may have realized that we excluded JavaScript from our webpage. Why?? JavaScript makes the person move, makes it sentient. For the purpose of
         a resume, we don't really require much intellect. In a sense, we're making a statue.
