--- a/eunoiashining/tutorial/basics.html
+++ b/eunoiashining/tutorial/basics.html
@@ -67,7 +67,7 @@
         that they are definitely a form of language, that the whole web architecture is based, be it chrome edge tor, all browsers must be able to interpret them to be even called browsers.</p>
       <p>In this section, you will learn the basics of how HTML is structured.</p>
       <h3>What is HTML?</h3>
-      <p>There are many descriptions of HTML, like how it stands for Hyper Text Markup Language, is the standard markup language for creating web pages and all that nonsense, I'll explain html by example.
+      <p class="text-justify">There are many descriptions of HTML, like how it stands for Hyper Text Markup Language, is the standard markup language for creating web pages and all that nonsense, I'll explain html by example.
       </p>
       <p>This is a basic HTML template. In the world of computer science, we usually start any programming language with "hello world". It's like the first step you take as a baby.</p>
       <div class="alert alert-primary" role="alert">
