--- a/eunoiashining/tutorial/advanced.html
+++ b/eunoiashining/tutorial/advanced.html
@@ -87,10 +87,10 @@
           <p>After you have downloaded, unzip and open the index.html file using notepad, and open the same file in the browser. You can edit your webpage by this way, and view changes at the same time.</p>
           <h1 id="item-1" class="mt-4">So how??</h1>
           <p>Okay in this section, i can't really help you much, it's your resume, and perhaps you aren't certified by Google (hire me if u are), or went to university, only you'll know what to write. But as a rule of thumb, you can refer to what the
-            guy/girl who developed this template wrote. Good luck!! I'm signing off :))
+            guy/girl who developed this template wrote. Good luck!!
           </p>
           <p>
-            On second thought, lemme just give you some suggestions on what to change yea?? If you don't understand how to do it or messed up something, do not languish, spare time for self care then feel free to consult me cuz i won't bite!! Woof.
+            Lemme just give you some suggestions on what to change yea?? If you don't understand how to do it or messed up something, do not languish, spare time for self care then feel free to consult me cuz i won't bite!! Woof.
             <br>
             And one more thing, if you wanna add something else not in this list (pictures, links, popouts just really anything), feel more than free to ask me, I'll try my very best to make it happen, it'll honestly make me feel really happy :))
           </p>
