--- a/eunoiashining/tutorial/advanced.html
+++ b/eunoiashining/tutorial/advanced.html
@@ -84,12 +84,12 @@
             <p class="mb-0"> <a href="https://startbootstrap.com/?showPro=false&showAngular=false&showVue=false" class="alert-link">This is where</a> I find other themes for other purposes.
             </p>
           </div>
-          <p>After you have downloaded, unzip and open the index.html file using notepad, and open the same file in the browser. You can edit your webpage by this way, and view changes at the same time.</p>
+          <p class="text-justify">After you have downloaded, unzip and open the index.html file using notepad, and open the same file in the browser. You can edit your webpage by this way, and view changes at the same time.</p>
           <h1 id="item-1" class="mt-4">So how??</h1>
-          <p>Okay in this section, i can't really help you much, it's your resume, and perhaps you aren't certified by Google (hire me if u are), or went to university, only you'll know what to write. But as a rule of thumb, you can refer to what the
+          <p class="text-justify">Okay in this section, i can't really help you much, it's your resume, and perhaps you aren't certified by Google (hire me if u are), or went to university, only you'll know what to write. But as a rule of thumb, you can refer to what the
             guy/girl who developed this template wrote. Good luck!!
           </p>
-          <p>
+          <p class="text-justify">
             Lemme just give you some suggestions on what to change yea?? If you don't understand how to do it or messed up something, do not languish, spare time for self care then feel free to consult me cuz i won't bite!! Woof.
             <br>
             And one more thing, if you wanna add something else not in this list (pictures, links, popouts just really anything), feel more than free to ask me, I'll try my very best to make it happen, it'll honestly make me feel really happy :))
@@ -104,8 +104,8 @@
             <br>7. Image of the hairy man. You may wanna delete/replace it.
             <br>8. Font styling of your resume, color of sidebar.
           </h6>
-          <p>Do refer to the introduction to html/css pages for reference on how to do these.</p>
-          <p>For reference, here's <a href="https://algebananazzzzz.github.io/" target="_blank">my own resume</a> you can refer to! Sorry my bad I'm still working on the last few sections (trying some new layout) so I didn't include it for now.</p>
+          <p class="text-justify">Do refer to the introduction to html/css pages for reference on how to do these.</p>
+          <p class="text-justify">For reference, here's <a href="https://algebananazzzzz.github.io/" target="_blank">my own resume</a> you can refer to! Sorry my bad I'm still working on the last few sections (trying some new layout) so I didn't include it for now.</p>
     </div>
 
   </div>
