--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-laptop-code"></i></span>
-            HTML5, CSS3, JavaScript, AngularJS , Bootstrap frameworks
+            HTML5, CSS3, JavaScript, Angular and React, Bootstrap frameworks
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-terminal"></i></span>
-            DevOps tools - Linux, Nginx, Redis, Docker and Kubernetes
+            DevOps tools - zsh/bash, Nginx, Redis, Docker and Kubernetes
           </li>
         </ul>
         <div class="subheading mb-3">Artificial Intelligence and machine learning</div>
