--- a/bigdaddy.html
+++ b/bigdaddy.html
@@ -11,7 +11,7 @@
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
   <!-- Google fonts-->
-  <!-- {You can add a font here, follow the documentation on css} -->
+  <!-- You can add a font here, follow the documentation on css -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
   <!-- Core theme CSS (includes Bootstrap)-->
@@ -142,21 +142,20 @@
         <ul class="fa-ul mb-0">
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            1
-            <sup>st</sup> Place - {Award 1}
+            {1}
+            <sup>{st}</sup> Place - {Award 1}
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            2
-            <sup>nd</sup> Place -
+            {member} -
             {Award 2}
           </li>
           <!-- start of copy -->
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            1
-            <sup>st</sup>
-            Place - (any award)
+            {2}
+            <sup>{nd}</sup>
+            Place - {any award}
           </li>
           <!-- end of copy -->
           <!-- you can copy and paste the above segment here to add more awards -->
