--- a/organic-chemistry-mindmap.html
+++ b/organic-chemistry-mindmap.html
@@ -436,14 +436,10 @@
     <section class="resume-section" id="future">
       <div class="resume-section-content">
         <h1 class="mb-0">
-          Future stuff
+          All the best!
         </h1>
         <div class="subheading mb-5">
-          Maybe tests? idk </div>
-        <p class="lead mb-5 text-justify">
-          Maybe tests? idk
-        </p>
-
+          69 reactions. Lets go.</div>
       </div>
     </section>
 
