--- a/index.html
+++ b/index.html
@@ -54,16 +54,9 @@
           <a href="mailto:daniel.zhouqx@gmail.com">daniel.zhouqx@gmail.com</a>
         </div>
         <p class="lead mb-5 text-justify">
-          <!-- I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-          proposition. -->
-          I am experienced in leveraging Frontend, Backend, and DevOps technologies to create multi-platform compatible web applications. Agile approach foster design thinking to further the overall value
-          proposition.
+          I consider myself to be an experienced junior developer, comfortable in the field yet much to learn. This self honed interest has grown into an aspiration, and I hope to further my studies in the domain of Computer Science, and eventually be a full time developer.
         </p>
-        <p class="mb-5 text-justify" style="font-size:0.8rem">Apart from being a web developer, I am a full time student, and with Singapore's tropical weather, I am an avid ultimate frisbee player and novice athlete, who enjoy swimming, running and
-          playing competitive frisbee regularly, as well as exploring new sports like rockclimbing, archery in this small island. Indoors, I am an amateur full stack developer, and I create web applications that can help me in the real world, while
-          exploring the latest
-          technologies in both the front-end and back-end web development world. This big picture approach to this vast domain of information technologies allows me to understand the nature and ecosystem of subdomains, and I hope to
-          specialize in an area of computer science in the future.</p>
+        <p class="mb-5 text-justify" style="font-size:0.8rem">Apart from being a developer, I am currently a Full-time National Serviceman serving the nation in the elite Commandos Formation. With Singapore's tropical weather, I am an avid ultimate frisbee player that plays competitive frisbee regularly and novice athlete, who enjoys swimming, running and triathlon training, as well as exploring new sports like rock climbing, archery on this small island. Indoors, I like exploring the vast domain of Computer Science, frequently involving myself in creating web applications or machine learning algorithms that can help me in the real world. With my studies in the subject of Knowledge and Inquiry, this big picture approach allows me to understand the nature and ecosystem of subdomains naturally with my abstract thinking.</p>
 
         <div class="social-icons">
           <a class="social-icon" target="_blank" href="https://github.com/algebananazzzzz"><i class="fab fa-github"></i></a>
@@ -86,6 +79,14 @@
               and Granimjs. Project is used by Eunioa Junior College's PE department for editing gameplay videos.</p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">Nov 2020 - Current</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Chemistry mindmap</h3>
+            <div class="subheading mb-3">Web page development</div>
+            <p class="text-justify">Created an interactive <a href="https://github.com/algebananazzzzz/algebananazzzzz.github.io/blob/main/organic-chemistry-mindmap.html" target="blank">webpage</a> that serves as a chemistry mindmap for students studying H2 Chemistry in the A level examinations to memorise 69 organic chemistry reactions. </p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">June 2021</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
