--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="subheading mb-3">Full stack developer</div>
             <p class="text-justify">Involved in full stack development and hosting of a video editing web application software, ProjectBalls, using the Django framework. Hosting is done through a private owned server and domain using Nginx, Docker
               and Kubernetes. Heavily utilizes python video processing library MoviePy, as well as Redis for enqueueing Asynchronous tasks in the backend. Frontend architecture utilizes HTML5, CSS3, Jquery and JavaScript libraries including MovieJs
-              and Granimjs. Project is used by Eunioa Junior College's PE department for editing gameplay videos.</p>
+              and Granimjs. Project is used by Eunoia Junior College's PE department for editing gameplay videos.</p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">Nov 2020 - Current</span></div>
         </div>
@@ -84,7 +84,7 @@
           <div class="flex-grow-1">
             <h3 class="mb-0">Chemistry mindmap</h3>
             <div class="subheading mb-3">Web page development</div>
-            <p class="text-justify">Created an interactive <a href="https://github.com/algebananazzzzz/algebananazzzzz.github.io/blob/main/organic-chemistry-mindmap.html" target="blank">webpage</a> that serves as a chemistry mindmap for students studying H2 Chemistry in the A level examinations to memorise 69 organic chemistry reactions. </p>
+            <p class="text-justify">Created an interactive <a href="https://algebananazzzzz.github.io/organic-chemistry-mindmap.html" target="blank">webpage</a> that serves as a chemistry mindmap for students studying H2 Chemistry in the A level examinations to memorise 69 organic chemistry reactions. </p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">June 2021</span></div>
         </div>
@@ -99,32 +99,6 @@
           </div>
           <div class="flex-shrink-0"><span class="text-primary">June 2018 - July 2018</span></div>
         </div>
-        <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop
-              on focusing solely on the bottom line.</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the
-              start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
-        </div> -->
       </div>
     </section>
     <hr class="m-0" />
